add base for arbitrary files